tests/fixtures/fail/type_unknown_name.sc
let main(): i32 = { missing }
